# PLExampleWithHydra

./: .gitignore  README.md  pyproject.toml
pl_train/dataloader/: factory.py
pl_train/optimizers/: sam.py
pl_train/pl_modules/: base_with_sam.py  mnist.py
scripts/: train.py
scripts/config/ml/: train.yaml
scripts/config/ml/hydra/: common.yaml
